Sat Aug  8 22:36:24 BOT 2009
  * Added GSL-1.13 features:
    * Added GSL::Monte::Miser#params_get, GSL::Monte::Vegas#params_get
    * Added GSL::BSpline::greville_abscissa(i)
    * Added GSL::Poly#eval_derivs(x)
    * Added a new minimization algorithm "quad_golden"
    * Added a new multimin algorithm "nmsimplex2rand"
	
Tue Jun  9 10:42:30 JST 2009
  * Fixed bug in linalg.c (bug [#25842])
	
Thu Feb  2 12:16:38 JST 2009
  * Fixed a bug in GSL::Histogram.alloc_uniform() (bug [#23040])
  * Fixed a bug in GSL::Vector#/ (bug [#23334])
	
Thu Nov  6 17:34:18 JST 2008
  * Match with the tensor extension version 0.99
    * now not compatible for the versions older than tensor-0.97.
	
Sat Jul 26 08:23:45 JST 2008
  * GSL::Poly.eval now handles complex numbers (GSL-1.11)
  * Added new quasi-random generators "halton" and "reversehalton"
  * Added a module function GSL::MultiFit::linear_residuals() (GSL-1.11)
  * Fixed a bug in ODE solver 
	
Mon Jun 30 22:07:24 JST 2008
  * Fixed GSL::Vector#normalize (#20865)
	
Mon May 26 19:21:15 JST 2008
  * Fixed a bug in GSL::Matrix::to_v (#19757)
  * Fixed a bug in GSL::Vector::Int multiplication (#19924)
	
Sat Dec  8 23:44:47     2007
  * Version 1.10.3

Tue Dec  2 16:30:15     2007
  * Improved GSL::Vector#get for a Range arg
  * Improved GSL::Vector#concat for an Array arg
  * Fixed a bug in GSL::Matrix.alloc with column vector arguments

Thu Dec  2 10:58:37     2007
  * Added methods GSL::Vector#pow(p), GSL::Vector#pow!(p)

Wed Oct 17 04:04:39     2007
  * Fixed a bug in poly_source.c

Sun Oct  7 14:18:31     2007
  * Version 1.10.0
  * ndlinear extension support

Sat Sep 22 01:49:57     2007
  Added GSL-1.10 features
  * Added generalized eigensystem methods
  * Added method GSL::Stats::correlation(v1, v2) to compute
    Pearson correlation of two datasets
  * Added methods GSL::Sf::expint_En(n, x), GSL::Sf::expint_En_e(n, x)
    for computing the n-th order exponential integral.