@@ -14,4 +14,4 @@ Daigo Moriwaki (Bug report)
 Joe Wölfel (Ruby-1.9 support)
 Cyrus Hall (patch for Ruby-1.9)
 Dave MacMahon (patch for FFT and interface refinements)
-
+Roman Shterenzon (Non-negative Matrix Factorization)
