@@ -33,11 +33,13 @@ FILE* rb_gsl_open_writefile(VALUE io, int *flag)
     break;
   case T_FILE:
     GetOpenFile(io, fptr);
+    /*
 #ifdef RUBY_1_9_LATER
     name = STR2CSTR(fptr->pathv);
 #else
     name = fptr->path;
 #endif
+    */
     rb_io_check_writable(fptr);
 #ifdef RUBY_1_9_LATER
     fp = rb_io_stdio_file(fptr);
@@ -50,7 +52,8 @@ FILE* rb_gsl_open_writefile(VALUE io, int *flag)
     rb_raise(rb_eTypeError, "argv 1 String or File expected");
     break;
   }
-  if (fp == NULL) rb_raise(rb_eIOError, "Cannot open file %s.", name);
+  //  if (fp == NULL) rb_raise(rb_eIOError, "Cannot open file %s.", name);
+  if (fp == NULL) rb_raise(rb_eIOError, "Cannot open file.");
   return fp;
 }
 
@@ -71,11 +74,13 @@ FILE* rb_gsl_open_readfile(VALUE io, int *flag)
     break;
   case T_FILE:
     GetOpenFile(io, fptr);
+    /*
 #ifdef RUBY_1_9_LATER
     name = STR2CSTR(fptr->pathv);
 #else
     name = fptr->path;
 #endif
+    */
     rb_io_check_readable(fptr);
 #ifdef RUBY_1_9_LATER
     fp = rb_io_stdio_file(fptr);
@@ -88,7 +93,8 @@ FILE* rb_gsl_open_readfile(VALUE io, int *flag)
     rb_raise(rb_eTypeError, "argv 1 String or File expected");
     break;
   }
-  if (fp == NULL) rb_raise(rb_eIOError, "Cannot open file %s.", name);
+  //  if (fp == NULL) rb_raise(rb_eIOError, "Cannot open file %s.", name);
+  if (fp == NULL) rb_raise(rb_eIOError, "Cannot open file");
   return fp;
 }
 
