@@ -1,10 +1,19 @@
+/**
+ * NMF: Non-Negative Matrix Factorization - Ruby wrapper
+ *
+ * Written by Roman Shterenzon
+ *
+ */
+
 #include <ruby.h>
 #include <gsl/gsl_matrix.h>
 
 int gsl_matrix_nmf(gsl_matrix *v, int cols, gsl_matrix **w, gsl_matrix **h);
-double difcost(gsl_matrix *a, gsl_matrix *b);
+//double difcost(gsl_matrix *a, gsl_matrix *b);
+double difcost(const gsl_matrix *a, const gsl_matrix *b);
 
-VALUE mNMF;
+//VALUE mNMF;
+static VALUE mNMF;
 extern VALUE cgsl_matrix;
 
 /*
@@ -53,7 +62,8 @@ static VALUE difcost_wrap(VALUE obj, VALUE matrix1, VALUE matrix2)
  */
 static VALUE matrix_nmf(VALUE obj, VALUE cols)
 {
-  nmf_wrap(cgsl_matrix, obj, cols);
+  //  nmf_wrap(cgsl_matrix, obj, cols);
+  return nmf_wrap(cgsl_matrix, obj, cols);
 }
 
 void Init_gsl_matrix_nmf(void) {
