@@ -1,8 +1,6 @@
 #ifndef ___RB_GSL_DIRAC_H___
 #define ___RB_GSL_DIRAC_H___
 
-#include "ruby.h"
-#include "rubyio.h"
 #include "rb_gsl.h"
 #include "rb_gsl_common.h"
 #include "rb_gsl_complex.h"
